--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,10 @@
     <string name="title_activity_main">AKR Gol App</string>
     <string name="ideato">Ideato e realizzato da Arandroid Developers. Per info</string>
     <string name="giornata">"Giornata: "</string>
+    <string name="eccellenza_calabrese">Eccellenza Calabrese</string>
+    <string name="prima_categoria">Prima Categoria</string>
+    <string name="serie_d">Serie D Girone I</string>
+    <string name="seconda_categoria">Seconda Categoria</string>
+    <string name="about">About</string>
 
 </resources>
